# pyreaddbc

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  Makefile  README.md  build.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yaml  release.yaml  wheels.py  wheels.yaml
conda/: dev.yaml
pyreaddbc/: __init__.py  _build_readdbc.py  _readdbc.c  readdbc.py
pyreaddbc/c-src/: dbc2dbf.c
tests/: __init__.py  test_pyreaddbc.py
tests/data/: STPI2206.dbc  ZIKABR16.DBC  ZIKABR21.dbc  sids.dbc
