[build-system]
requires = [
    "poetry-core>=1.0.0", "setuptools>=41.0.0", "wheel", "cffi"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
script = "pyreaddbc/_build_readdbc.py"
generate-setup-file = false

[tool.poetry.group.dev.dependencies]
pandas = "^2.1.0"

[tool.poetry]
name = "pyreaddbc"
version = "1.0.0"  # changed by semantic-release
description = "pyreaddbc package"
readme = "README.md"
authors = ["Flavio Codeco Coelho <fccoelho@gmail.com>", "Sandro Loch <es.loch@gmail.com>"]
license = "AGPL-3.0"
repository = "https://github.com/osl-incubator/pyreaddbc"
homepage = "https://github.com/osl-incubator/pyreaddbc"

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [  #! Update me
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: GNU Affero General Public License AGPL-3.0",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

include = [
    {path = "pyreaddbc/_readdbc.so"}
]

packages = [
    { include = "pyreaddbc" },
]

[tool.poetry.dependencies]
python = ">=3.9,<4"
dbfread = ">=2.0.7,<3"
tqdm = ">=4.64.0,<5"
cffi = ">=1.15.1,<2"
pyyaml = ">=6"

[tool.poetry.dev-dependencies]
black = ">=22.6.0"
isort = ">=5.10.1"
flake8 = ">=5.0.4"
pre-commit = ">=2.20.0"
pytest = ">=7.1.2"
commitizen = ">=2.32.2"
chardet = ">=5.2.0"

[tool.black]
line-length = 79
skip-string-normalization = true
target-version = ["py39", "py310", "py311"]
exclude = "docs/"
